--- a/index.html
+++ b/index.html
@@ -11,10 +11,19 @@
 
     <form id="create-task-form" action="#" method="post">
       <label for="new-task-description">Task description:</label>
-      <input type="text" id="new-task-description" name="new-task-description" placeholder="description">
+      <input type="text" id="new-task-description" name="new-task-description" placeholder="description" autofocus=true>
+      <label for="due-date">Due Date:</label>
+      <input type="text" name="due-date" id="due-date">
+      <label>Priority</label>
+      <select>
+        <option id="red" value="red-1">High</option>
+        <option id="yellow" value="yellow-2">Medium</option>
+        <option id="green" value="green-3">Low</option>
+        <option id="none" value="none-4">None</option>
+      </select>
       <input type="submit" value="Create New Task">
     </form>
-
+      <button onclick="sort(event)">Sort by Priority: <span id="sortDescription">None</span></button> 
     <div id="list">
       <h2>My Todos</h2>
       <ul id="tasks">
